<resources>
    <string name="app_name">VMT</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="notification">Thông báo</string>
    <string name="input_notes">Nhập ghi chú</string>
    <string name="register_account"><u>Đăng ký</u></string>
    <string name="username">Tên đăng nhập</string>
    <string name="save_change">Lưu thay đổi</string>
    <string name="password">Mật khẩu</string>
    <string name="password_new">Mật khẩu mới</string>
    <string name="password_confirm">Xác nhận mật khẩu</string>
    <string name="remember_account">Ghi nhớ tài khoản</string>
    <string name="forgot_pass"><u>Quên mật khẩu?</u></string>
    <string name="login">Đăng nhập</string>
    <string name="confirm">Xác nhận</string>
    <string name="name">Tên</string>
    <string name="phone">Số điện thoại</string>
    <string name="email">Email</string>
    <string name="address">Địa chỉ</string>
    <string name="confirm_password">Xác nhận mật khẩu</string>
    <string name="birthday">Ngày sinh</string>
    <string name="gender">Giới tính</string>
    <string name="female">Nữ</string>
    <string name="male">Nam</string>
    <string name="edit_profile">Edit profile</string>
    <string name="not_yet_input">Chưa nhập</string>
    <string name="can_not_parse_response">Can not parse response</string>
    <string name="forgot_screen_msg">There is such a lot of talk going around about branding, but what exactly is your brand and how do you use it to help you reach more people and market</string>
    <string name="no_data">Không có dữ liệu</string>
    <string name="reload">Tải lại</string>
    <string name="profile">Thông tin cá nhân</string>
    <string name="buy_help_order">Đơn hàng mua hộ</string>
    <string name="transport_order">Đơn hàng vận chuyển</string>
    <string name="pay_order">Đơn hàng thanh toán</string>
    <string name="profile_enter">Thông tin\ncá nhân</string>
    <string name="buy_help_order_enter">Đơn hàng\nmua hộ</string>
    <string name="transport_order_enter">Đơn hàng\nvận chuyển</string>
    <string name="pay_order_enter">Đơn hàng\nthanh toán</string>
    <string name="first_name">Họ</string>
    <string name="last_name">Tên</string>
    <string name="amount">Số tiền</string>
    <string name="level">Level</string>
    <string name="logout">Đăng xuất</string>
    <string name="yes">Có</string>
    <string name="no">Không</string>
    <string name="are_you_sure_logout">Bạn chắc chắn thoát</string>
    <string name="complain">Khiếu nại</string>
    <string name="account_manager">Quản lý tài khoản</string>
    <string name="Select_a_photo">Select a photo</string>
    <string name="Select_a_gender">Chọn giới tính</string>
    <string name="Take_photo">Take photo</string>
    <string name="Choose_from_library">Choose from library</string>
    <string name="cancel">Cancel</string>
    <string name="pre_file_name">VMT_</string>
    <string name="not_input">Chưa nhập</string>
    <string name="quit">Press back again to quit.</string>
    <string name="order">Đặt hàng</string>
    <string name="account_info">Thông tin tài khoản</string>
    <string name="score">Điểm tích lũy</string>
    <string name="change_pass">Đổi pass</string>
    <string name="select_file">Select file</string>
    <string name="select_category">Chọn danh mục</string>
    <string name="notes">Ghi chú</string>
</resources>
