<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <!--import class BindingUtils-->
        <!--<import type="info.androidhive.databinding.utils.BindingUtils" />-->

        <!--<import type="android.view.View"/>-->

        <!--<variable-->
        <!--name="viewModel"-->
        <!--type="com.alpine.my19app.app.MainViewModel" />-->
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/login_background">

        <ImageView
            style="@style/iv_common"
            android:scaleType="fitStart"
            android:src="@drawable/login_background" />

        <LinearLayout
            android:id="@+id/root"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageView
                    style="@style/iv_common"
                    android:layout_height="90dp"
                    android:scaleType="fitStart"
                    android:src="@drawable/login_logo" />

            </FrameLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.v7.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="5dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/colorWhite"
                            android:orientation="vertical"
                            android:padding="10dp">

                            <EditText
                                android:inputType="textPassword"
                                android:id="@+id/edPassword"
                                style="@style/ed_common"
                                android:layout_marginTop="5dp"
                                android:hint="@string/password" />
                            <EditText
                                android:id="@+id/edPasswordNew"
                                android:inputType="textPassword"
                                style="@style/ed_common"
                                android:hint="@string/password_new" />
                            <EditText
                                android:id="@+id/edPasswordConfirm"
                                android:inputType="textPassword"
                                style="@style/ed_common"
                                android:hint="@string/password_confirm" />
                            <FrameLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginTop="5dp">

                                <Button
                                    android:id="@+id/btnSave"
                                    style="@style/menu_button"
                                    android:text="@string/save_change" />

                                <ProgressBar
                                    android:id="@+id/progressBar"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:elevation="2dp" />

                            </FrameLayout>
                        </LinearLayout>
                    </android.support.v7.widget.CardView>
                </LinearLayout>
            </ScrollView>
        </LinearLayout>

    </FrameLayout>
</layout>
